--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-portfolio-rev1.1-app",
+  "name": "react-portfolio-rev-1.1-app",
   "version": "1.3.3",
   "private": true,
-  "homepage": "https://curriecoder.github.io/react-portfolio-rev1.1",
+  "homepage": "https://curriecoder.github.io/react-portfolio-rev-1.1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
